# tnc-runoff

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  readme.md  requirements.txt
.github/workflows/: lint.yml  test.yml
tnc/: bucket.py  cli.py  config.py  convert.py  hspf_runner.py  main.py  pet.py  wwhm.py
tnc/tests/: conftest.py  test_cli.py  test_hspf_runner.py  test_ipwater.py  test_regression.py
tnc/tests/integration/: test_bucket.py  test_main.py
tnc/tests/ipwater_data/: Flow_Test.plt  HSPF_Test.ech  HSPF_Test240.uci  make_uci_data.py
tnc/tests/regression_data/: hru010_results.csv  hru250_results.csv  test_inputs.csv
tnc/wwhm_data/: WWHM_IMPLNDs.csv  WWHM_PERLNDs.csv  _temp_evap.csv
